Updated the code

--- a/DisplayForm/appsettings.json
+++ b/DisplayForm/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AzureServiceBus": "Endpoint=sb://myservicesbustimdj.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=XxV8nX/Fwt2Y+zZ9uDYgefDLaIFbUafUCwh38UF1Mo8="
+  }
 }
